force-app/main/default/objects/Document_Template__c/Document_Template__c.object-meta.xml
<CustomObject>
    <label>Document Template</label>
    <nameField>
        <displayFormat>DT-{00000}</displayFormat>
        <label>Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>