force-app/main/default/objects/Document_Template__c/fields/Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Activation_Date__c</fullName>
    <label>Activation Date</label>
    <type>DateTime</type>
</CustomField>