force-app/main/default/objects/Document_Template__c/fields/Activation_Date_ReadOnly__c.field-meta.xml
<CustomField>
    <fullName>Activation_Date_ReadOnly__c</fullName>
    <formula>Activation_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activation Date</label>
    <type>DateTime</type>
</CustomField>