force-app/main/default/objects/Document_Template__c/fields/Archived_Date_ReadOnly__c.field-meta.xml
<CustomField>
    <fullName>Archived_Date_ReadOnly__c</fullName>
    <formula>Archived_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Archived Date</label>
    <type>DateTime</type>
</CustomField>