force-app/main/default/objects/Document_Template__c/fields/Document_Name__c.field-meta.xml
<CustomField>
    <fullName>Document_Name__c</fullName>
    <label>Document Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>