force-app/main/default/objects/Document_Template__c/fields/Output_Filename__c.field-meta.xml
<CustomField>
    <fullName>Output_Filename__c</fullName>
    <label>Output Filename</label>
    <length>100</length>
    <type>Text</type>
</CustomField>