force-app/main/default/objects/Document_Template__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VANs</fullName>
            </value>
            <value>
                <fullName>eNett EFT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>