force-app/main/default/objects/Document_Template__c/fields/Related_Regions__c.field-meta.xml
<CustomField>
    <fullName>Related_Regions__c</fullName>
    <label>Related Regions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Americas</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>New Zealand</fullName>
            </value>
            <value>
                <fullName>Hong Kong</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>