force-app/main/default/objects/Document_Template__c/fields/Version_ReadOnly__c.field-meta.xml
<CustomField>
    <fullName>Version_ReadOnly__c</fullName>
    <formula>TEXT(Version__c)</formula>
    <label>Version</label>
    <type>Text</type>
</CustomField>