force-app/main/default/objects/Document_Template__c/recordTypes/In_Flight.recordType-meta.xml
<RecordType>
    <fullName>In_Flight</fullName>
    <active>true</active>
    <label>In Flight</label>
</RecordType>