force-app/main/default/objects/Document_Template__c/validationRules/Active_Templates_Cannot_Go_to_Inflight.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Templates_Cannot_Go_to_Inflight</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp; ISPICKVAL(PRIORVALUE(Status__c), &#39;Active&#39;) &amp;&amp; ISCHANGED(Status__c) &amp;&amp; NOT(ISPICKVAL(Status__c, &#39;Archived&#39;))</errorConditionFormula>
    <errorMessage>Active templates cannot return to In Flight status (instead clone this record and set to In Flight)</errorMessage>
</ValidationRule>