force-app/main/default/objects/Document_Template__c/validationRules/An_active_template_cannot_be_modified.validationRule-meta.xml
<ValidationRule>
    <fullName>An_active_template_cannot_be_modified</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp; ISPICKVAL(Status__c, &#39;Active&#39;) &amp;&amp; NOT(ISCHANGED(Status__c))</errorConditionFormula>
    <errorMessage>An active template cannot be modified.</errorMessage>
</ValidationRule>