force-app/main/default/objects/Document_Template__c/validationRules/An_archived_template_cannot_be_modified.validationRule-meta.xml
<ValidationRule>
    <fullName>An_archived_template_cannot_be_modified</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp; ( (ISPICKVAL(Status__c, &#39;Archived&#39;) &amp;&amp; NOT(ISCHANGED(Status__c)) ) || ISPICKVAL(PRIORVALUE(Status__c), &#39;Archived&#39;))</errorConditionFormula>
    <errorMessage>An archived template cannot be modified.</errorMessage>
</ValidationRule>