force-app/main/default/objects/Document_Template__c/validationRules/New_templates_must_be_set_to_InFlight.validationRule-meta.xml
<ValidationRule>
    <fullName>New_templates_must_be_set_to_InFlight</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp; NOT(ISPICKVAL(Status__c, &#39;In Flight&#39;))</errorConditionFormula>
    <errorMessage>New or cloned templates must be set to &#39;In Flight&#39; status</errorMessage>
</ValidationRule>