force-app/main/default/objects/Document_Template__c/validationRules/Only_active_templates_can_be_archived.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_active_templates_can_be_archived</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp; ISPICKVAL(Status__c, &#39;Archived&#39;) &amp;&amp; ISCHANGED(Status__c) &amp;&amp; NOT(ISPICKVAL(PRIORVALUE(Status__c), &#39;Active&#39;))</errorConditionFormula>
    <errorMessage>Only active templates can be archived</errorMessage>
</ValidationRule>