force-app/main/default/objects/Document_Template__c/validationRules/Only_the_status_can_change_on_archive.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_the_status_can_change_on_archive</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp; ISPICKVAL(Status__c, &#39;Archived&#39;) &amp;&amp; ISCHANGED(Status__c) &amp;&amp; (ISCHANGED(Content__c) ||  ISCHANGED(Document_Name__c) || ISCHANGED(Version__c) || 	ISCHANGED(Output_Filename__c))</errorConditionFormula>
    <errorMessage>Only the status can be updated when archiving</errorMessage>
</ValidationRule>