force-app/main/default/objects/Document_Template__c/listViews/Active_Templates.listView-meta.xml
<ListView>
    <fullName>Active_Templates</fullName>
    <columns>NAME</columns>
    <columns>Document_Name__c</columns>
    <columns>Version__c</columns>
    <columns>Product__c</columns>
    <columns>Related_Regions__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Templates</label>
</ListView>