force-app/main/default/objects/Document_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Document_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Version__c</columns>
    <columns>Product__c</columns>
    <columns>Related_Regions__c</columns>
    <columns>Source__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>