force-app/main/default/objects/Document_Template__c/listViews/Archived_Templates.listView-meta.xml
<ListView>
    <fullName>Archived_Templates</fullName>
    <columns>NAME</columns>
    <columns>Document_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Version__c</columns>
    <columns>Product__c</columns>
    <columns>Related_Regions__c</columns>
    <columns>Source__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Archived</value>
    </filters>
    <label>Archived Templates</label>
</ListView>